# epiworldpy

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  README.qmd  Vagrantfile  pyproject.toml  setup.py
.github/workflows/: enscripten.yaml  pip.yaml  publish.yaml  sphinx.yaml  wheels.yml
docs/: Makefile  README.qmd  api.rst  conf.py  ctoc.md  index.md  intro.md  intro.qmd
docs/_autosummary/: epiworldpy.rst
docs/_templates/: custom-module-template.rst
epiworldpy/: CMakeLists.txt  __init__.py  agent.cpp  agent.hpp  common-fs.hpp  common.hpp  database.cpp  database.hpp  diagram.hpp  entity.cpp  entity.hpp  epiworld-common.hpp  main.cpp  model.cpp  model.hpp  saver.cpp  saver.hpp  tool.cpp  tool.hpp  virus.cpp  virus.hpp
epiworldpy/epimodels/: __init__.py
epiworldpy/include/epiworld/: agent-meat.hpp
interactives/: GettingStarted.qmd  Presentation.qmd
scripts/: llmfmt.pl  llmfmt.py  ppquarto.pl
src/: database.cpp  diagram.cpp  diagram.hpp  entity.cpp  entity.hpp  epiworld-common.hpp  main.cpp  model.cpp  model.hpp  saver.cpp  tool.cpp  virus.cpp  virus.hpp
src/epiworldpy/: __init__.py
tests/: test_api.py  test_basic.py  test_db.py  test_distribution.py  test_models.py  test_new_models.py  test_saver.py
