[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "epiworldpy"
version = "0.6.0-0"
description = "Python bindings for epiworld"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pybind11>=3.0",
    "numpy>=2.1.0"
]

authors = [
    { name = "George G. Vega Yon", email = "g.vegayon@gmail.com" },
    { name = "Olivia Banks", email = "oliviabanks@fastmail.nl" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = [
    "epiworldpy[dev]",
    "pytest >= 8.4"
]

dev = [
    "ipympl>=0.8",
    "matplotlib>=3.5",
    "networkx>=3.0",
    "scipy>=1.0",
    "pandas>=2.1",
]

doc = [
    "epiworldpy[dev]",
    "nbformat >= 5.10",
    "nbclient >= 0.10",
    "jupyter >= 1.1",
    "myst_parser >= 4.0",
    "sphinx-book-theme >= 1.1",
]

[tool.scikit-build.wheel]
expand-macos-universal-tags = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest", # Python 3.12
]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
build-verbosity = 1
